# DarkDeepF030

./: readme.md
F030_LCD_PCB_Project/: Sheet1.SchDoc  readme.md
HW/F030_LCD_PCB_Project/: F030_LCD_PCB_Project.PrjPcb  PCB1.PcbDoc
HW/F030_LCD_PCB_Project/__Previews/: Sheet1.SchDocPreview
OLED_SPI_PCB_Project/: OLED_SPI_PCB_Project.PrjPcb  Sheet1.SchDoc  readme.md
SW/darkdeepmcu/: CMakeLists.txt  f0.cmake
SW/darkdeepmcu/libmcu/F0/hal_cpp/: Led.cpp  Led.h  font.cpp  font.h  gpio.h  led.h  spi.h  ssd1306.cpp  ssd1306.h
SW/darkdeepmcu/projects/f030_cpp_demo/: _CMakeLists.txt  f030f4p6.ld  mian.cpp  stm32f0xx_hal_conf.h  stm32f0xx_it.cpp  stm32f0xx_it.h  system_stm32f0xx.h
SW/darkdeepmcu/projects/f030_cpp_demo/Keil/: test.uvguix.13567  test.uvoptx  test.uvprojx
SW/darkdeepmcu/projects/f030_cpp_demo/Keil/Listings/: keil_startup_stm32f030x6.lst  test.map
